# trafficmodel

./: README.md  start_traffic_model.sh
.github/workflows/: ci.yml
cpp/: .clang-format  CMakeLists.txt
cpp/include/trafficmodel/: csv_writer.h  input_config.h  traffic_model.h  traffic_packet.h
cpp/include/trafficmodel/models/: equal.h  poisson.h
cpp/src/: main.cpp
cpp/src/trafficmodel/: csv_writer.cpp  input_config.cpp
cpp/src/trafficmodel/models/: equal.cpp  poisson.cpp
examples/: equal_10_10.txt  poisson_10_10.txt
examples/results/equal/: output.csv
examples/results/poisson/: output.csv
python/: analyze_traffic.py
